When pressing the 'nutrition' nav link - the nav bar covers the section's heading. I have added some css styling to fix this.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    scroll-padding-top: 80px;
   }
 
   body { 
@@ -10,6 +11,7 @@
     overflow:auto;
     scroll-behavior: smooth;
     overflow-y: auto !important;
+    margin: 44px auto 0
   }
 
   ::-webkit-scrollbar { 
@@ -255,4 +257,5 @@ input:focus::-moz-placeholder {
 input:-moz-placeholder {
 	opacity : 0;
 }
+
 
